js/js.translator/testData/incremental/invalidation/wasmJsInterop/main/k.kt
fun foo() = jsFunction()

fun boo() = jsFunFunction()